# test_fastapi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 5b61f59b4560_init.py
app/: __main__.py  config.py  main.py
app/domains/tasks/: abstraction.py  model.py  service.py
app/dto/: task.py
app/gateway/routers/: __init__.py  task.py
app/infrastructure/task/: orm.py
app/repository/: task.py
app/web/: hypercorn.py
test/unit/: conftest.py
test/unit/domains/tasks/: test_api.py  test_model.py  test_repository.py  test_service.py
